Added documentation, moved csv file directory to application.properties, code cleaning

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+# CSV file path
+app.csv.folder=./data
+app.csv.bug=/bugs.csv
+app.csv.device=/devices.csv
+app.csv.tester=/testers.csv
+app.csv.tester-device=/tester_device.csv
